# ls3icons

./: .clang-format  ClassFactory.cpp  ClassFactory.h  Guid.h  Ls3Icons.cpp  Ls3Icons.def  Ls3Icons.rc  ShellExt.cpp  ShellExt.h  resource.h
Ls3Icons/: Ls3IconShlExt.cpp  Ls3IconShlExt.h  Ls3IconShlExt.rgs  Ls3Icons.cpp  Ls3Icons.def  Ls3Icons.idl  Ls3Icons.rc  Ls3Icons.sln  Ls3Icons.vcxproj  Ls3Icons.vcxproj.filters  Ls3Icons_i.h  ReadMe.txt  dlldata.c  dllmain.cpp  dllmain.h  resource.h  stdafx.cpp  xdlldata.c
metabuild/: CMakeLists.txt
